# heritageprovenance

./: .gitignore  EVENTS_PAGE_GUIDE.md  EXACT_TEST_STEPS.md  QUICKSTART.md  README.md  SIGNATURE_DEBUG.md  TESTING.md  TEST_STEPS.md  TRANSFORMATION_STATUS.md  UI_IMPROVEMENTS.md  UI_TESTING_GUIDE.md
backend/: MANIFEST.in  README.md  pyproject.toml
backend/app/: __init__.py  anchor.py  auth.py  crypto.py  db.py  main.py  merkle.py  models.py  provenance.py  routes.py  routes_admin.py  routes_auth.py  routes_contribute.py  routes_contributor.py  routes_gallery.py  schemas.py  security.py  utils.py
backend/data/: .gitkeep  anchors.json  provenance.db
backend/data/binaries/: .gitkeep
backend/myenv/: pyvenv.cfg
backend/provenance_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: __init__.py  create_actor.py  create_admin.py  seed_kathmandu_items.py
cryptocore/: go.mod  test_hash.go
cryptocore/hash/: artifact_hash.go
cryptocore/hash_test/: artifact_hash_test.go
cryptocore/merkle/: tree.go
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AuthGuard.tsx  Timeline.css  Timeline.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Actors.css  Actors.tsx  AdminDashboard.tsx  Anchor.css  Anchor.tsx  ContributorDashboard.tsx  Dashboard.css  Dashboard.tsx  Events.css  Events.tsx  Ingest.css  Ingest.tsx  Login.tsx  RequestContribution.tsx  Verify.css  Verify.tsx
